trunk/Archive2/07/e11abbb4f984a3/output
main.cpp:4:15: error: ‘std::size_t’ has not been declared
 template<std::size_t R, std::size_t C>
               ^
main.cpp:4:30: error: ‘std::size_t’ has not been declared
 template<std::size_t R, std::size_t C>
                              ^
main.cpp:7:34: error: ‘bitboard’ in namespace ‘sob’ does not name a type
     explicit snake(typename sob::bitboard<R, C>::cell, const sob::bitboard<R, C>& = sob::bitboard<R, C>());
                                  ^
main.cpp:7:42: error: expected ‘,’ or ‘...’ before ‘<’ token
     explicit snake(typename sob::bitboard<R, C>::cell, const sob::bitboard<R, C>& = sob::bitboard<R, C>());
                                          ^
